--- a/index.html
+++ b/index.html
@@ -61,6 +61,48 @@
 					<button data-modal-open type="button" value="Заказать услугу" class="button primary">Заказать услугу</button>
 					<div data-modal class="backdrop is-hidden">
 						<div class="modal">
+								<h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+								<form class="form">
+									<label class="form-field">
+										<input type="text" class="form-input" name="name" />
+										<svg aria-label="ваше имя" class="form-icon" width="18px" height="18px">
+											<use href="./images/icons.svg#icon-person"></use>
+										</svg>
+										<span class="form-label">Имя</span>
+									</label>
+									<label class="form-field">
+										<input type="tel" class="form-input" name="phone-number" />
+										<svg aria-label="номер телефона" class="form-icon" width="18px" height="18px">
+											<use href="./images/icons.svg#icon-phone"></use>
+										</svg>
+										<span class="form-label">Телефон</span>
+									</label>
+									<label class="form-field">
+										<input type="email" class="form-input" name="e-mail" />
+										<svg aria-label="электронный адрес" class="form-icon" width="18px" height="18px">
+											<use href="./images/icons.svg#icon-email"></use>
+										</svg>
+										<span class="form-label">Почта</span>
+									</label>
+									<label class="form-field">
+										<textarea name="comment" class="form-comment" placeholder="Введите текст"></textarea>
+										<span class="form-label">Комментарий</span>
+									</label>
+									<label class="form-field-checkbox">
+										<input class="form-checkbox" type="checkbox" name="policy-agree" value="policy-agree">
+										<span class="form-checkbox-icon">
+											<svg aria-label="checkbox" class="checkbox-icon" width="16px" height="15px">
+												<use href="./images/icons.svg#icon-check"></use>
+											</svg>
+										</span>
+										<span class="form-checkbox-text">Соглашаюсь с рассылкой и принимаю <a class="form-contract-link"
+												href="#">Условия договора</a></span>
+									</label>
+									<button type="submit" value="Отправить" class="button primary form">
+										Отправить
+									</button>
+								</form>
+
 							<button data-modal-close type="button" value="закрыть окно" class="modal-close">
 								<svg aria-label="закрыть окно" width="18px" height="18x">
 									<use href="./images/icons.svg#icon-x"></use>
@@ -408,6 +450,26 @@
 								</a>
 							</li>
 						</ul>
+					</div>
+					<div class="footer-thumb">
+						<form class="footer-form">
+							<h4 class="footer-title">Подпишитесь на рассылку</h4>
+							<label>
+								<input 
+								type="email" 
+								class="email-input" 
+								name="email" 
+								placeholder="E-mail" 
+								/>
+							</label>
+								
+								<button type="submit" class="footer-button">
+									Подписаться
+									<svg class="icon" width="24px" height="24px">
+										<use href="./images/icons.svg#icon-send"></use>
+									</svg>
+								</button>
+						</form>
 					</div>
 				</div>
 			</footer>
