--- a/portfolio.html
+++ b/portfolio.html
@@ -272,6 +272,21 @@
 							</li>
 						</ul>
 					</div>
+					<div class="footer-thumb">
+						<form class="footer-form">
+							<h4 class="footer-title">Подпишитесь на рассылку</h4>
+							<label>
+								<input type="email" class="email-input" name="email" placeholder="E-mail" />
+							</label>
+					
+							<button type="submit" class="footer-button">
+								Подписаться
+								<svg class="icon" width="24px" height="24px">
+									<use href="./images/icons.svg#icon-send"></use>
+								</svg>
+							</button>
+						</form>
+					</div>
 				</div>
 			</footer>
 	</body>
